# DiningPhilosophers

./: CMakeLists.txt  Event.hpp  Fork.hpp  LICENSE  Philosopher.hpp  PrintEvents.hpp  TimedWork.hpp  main.cpp
